# connect4-solver

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Position.hpp  README.md  Solver.cpp  main.cpp  py_wrapper.cpp
